<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">伊文特</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">标题</string>
    <string name="next">下一步</string>
    <string name="setting">设置</string>
    <string name="finish">完成</string>
    <string name="search_header">搜</string>
    <string name="search">搜索</string>
    <string name="prompt">提示</string>
    <string name="save">保存</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_user_hint">手机号</string>
    <string name="login_pwd_hint">密码</string>
    <string name="login_wrong">无法登录？</string>
    <string name="login_new">新用户</string>
    <string name="register_tel_hint">请输入您的手机号码</string>
    <string name="register_tel">中国+86</string>
    <string name="register_code_hint">请输入验证码</string>
    <string name="register_pwd_hint">请输入密码</string>
    <string name="reset_pwd">重置密码</string>
    <string name="check_phone">验证手机号</string>
    <string name="send_again">发送验证码</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_load">MainActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="tab_schedual">日程</string>
    <string name="tab_activity">活动</string>
    <string name="tab_message">消息</string>
    <string name="tab_profile">我</string>
    <string name="contact">通讯录</string>
    <string name="discussionRoom">讨论室</string>
    <string name="MyDiscussionRoom">我的讨论室</string>
    <string name="ActivityShareBoard">活动分享板</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="edit">编辑</string>
    <string name="course">课程</string>
    <string name="schedual">日程</string>
    <string name="search_course">搜索课程</string>
    <string name="add_manully">手动添加</string>
    <string name="course_info">课程信息</string>
    <string name="location">地点</string>
    <string name="teacher">老师</string>
    <string name="week">周数</string>
    <string name="course_time">节数</string>
    <string name="course_name">课程名称</string>
    <string name="course_search_hint">课程名/老师</string>
    <string name="addtocourse">加入课程</string>
    <string name="location_1">教室:</string>
    <string name="teacher_1">老师:</string>
    <string name="week_1">周数:</string>
    <string name="course_time_1">节数:</string>
    <string name="add_course">添加课程</string>
    <string name="delete_course">删除本节课</string>
    <string name="guide">上课导航</string>
    <string name="your_loc">你的位置</string>
    <string name="open">开启</string>
    <string name="classtime">上课时间</string>
    <string name="settime">设置时间</string>
    <string name="look">看看</string>
    <string name="classmate">同学的总数</string>
    <string name="classfriend">同课的朋友</string>
    <string name="findfriend">找朋友</string>
    <string name="other_time">其他时段</string>
    <string name="choose_week">请选择课程周数</string>
    <string name="choose_time">请选择课程节数</string>
    <string name="add_time">添加其他时段</string>
    <string name="dialog_title">日程提醒</string>
    <string name="eventtitle">标题</string>
    <string name="eventlocation">地点</string>
    <string name="eventdetail">详情</string>
    <string name="eventspan">持续</string>
    <string name="eventrepeat">频率</string>
    <string name="eventalarm">提醒</string>
    <string name="eventpartner">同伴</string>
    <string name="eventhost">发起者</string>
    <string name="gotofriends">通讯录</string>
    <string name="eventtimestart">开始</string>
    <string name="settingdata">日期</string>
    <string name="settingtime">时刻</string>
    <string name="eventtimeend">结束</string>
    <string name="eventreminder">提醒开启</string>
    <string name="advancereminder">提前提醒</string>
    <string name="toggleButton">开关</string>
    <string name="eventremindway">提醒方式</string>
    <string name="eventremindfreq">提醒频率</string>
    <string name="popcancel">取消</string>
    <string name="eventcrash">检查冲突</string>
    <string name="popfinish">完成</string>
    <string name="lable">标签</string>
    <string name="select">选择</string>
    <string name="textchange">改变标题</string>
    <string name="viewchange">视图切换</string>
    <string name="currentevent">今日事项</string>
    <string name="addevent">新建事件</string>
    <string name="editevent">编辑</string>
    <string name="delete">删除</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="wait"></string>
    <string name="search_course_table">搜索课表</string>
    <string name="classinfo">班级信息(非必填)</string>
    <string name="school_year">年级</string>
    <string name="school">学院</string>
    <string name="major">专业</string>
    <string name="mclass">班级</string>
    <string name="school_year_hint">选择您的年级</string>
    <string name="school_hint">选择您的学院</string>
    <string name="major_hint">选择您的专业</string>
    <string name="mclass_hint">选择您的班级</string>
    <string name="mclass_1">班级:</string>
    <string name="add_table">直接添加整张课表</string>
    <string name="course_table_detail">课表详情</string>
    <string name="course_table_add">添加课表</string>
    <string name="add">添加</string>
    <string name="newfriend_hint">输入手机号搜索好友</string>
    <string name="add_contact_friend">邀请或添加通讯录中的朋友</string>
    <string name="phone_contact">手机联系人</string>
    <string name="new_friend">新的朋友</string>
    <string name="search_result">搜索结果</string>
    <string name="send_request">发送申请</string>
    <string name="update_nick">修改昵称</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="friend_hint">你需要发送验证申请，等对方通过</string>
    <string name="selfinfo_hint">好名字可以让你的好朋友更容易记得你</string>
    <string name="moreselected">更多活动</string>
    <string name="back">返回</string>
    <string name="studyview">学习</string>
    <string name="workview">求职</string>
    <string name="lifeview">生活</string>
    <string name="entertainmentview">娱乐</string>
    <string name="morecommend">推荐</string>
    <string name="preference">偏好</string>
    <string name="mypreference">我的偏好</string>
    <string name="title_activity_activity__event_detail">Activity_EventDetail</string>
    <string name="event_detail">活动详情</string>
    <string name="list_is_for">正在获取好友和群聊列表…</string>
    <string name="title_activity_fill_in_user_info">FillInUserInfoActivity</string>
    <string name="fillin_info">完善个人信息</string>
    <string name="nick_hint">必填项</string>
    <string name="email">邮箱</string>
    <string name="email_hint">填写您的邮箱地址</string>
    <string name="sex">性别</string>
    <string name="add_group">发起群聊</string>
    <string name="submit">确认</string>
    <string name="theme">主题</string>
    <string name="pubtime">发布时间</string>
    <string name="publiser">活动来源:</string>
    <string name="a_time">活动时间:</string>
    <string name="a_place">活动地点:</string>
    <string name="comment">评论</string>
    <string name="commenter">匿名</string>
    <string name="comment_et">你怎么看</string>
    <string name="title_activity_event_comment">EventCommentActivity</string>
    <string name="share_single">分享给好友</string>
    <string name="share_group">分享给群组</string>
    <string name="share">分享</string>
    <string name="share_activity">分享</string>
    <string name="title_activity_share_to_single">ShareToSingleActivity</string>
    <string name="title_activity_chat_room_setting">ChatRoomSettingActivity</string>
    <string name="clear_msg">清空聊天记录</string>
    <string name="chat">聊天</string>
    <string name="my_collect">我的收藏</string>
    <string name="exit">退出登录</string>
    <string name="title_activity_collect">CollectActivity</string>
    <string name="local_phone">手机通讯录</string>
    <string name="name">名字</string>
    <string name="tel">手机号</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="commentroom">讨论室</string>
    <string name="title_activity_browser_history">BrowserHistoryActivity</string>
    <string name="browser_history">浏览历史</string>
    <string name="clear">清空</string>
    <string name="nick">昵称</string>
    <string name="collect">参加</string>
    <string name="add_more">添加其他信息</string>
    <string name="todo">待办</string>
    <string name="todo_time">截止</string>
    <string name="version_info">检查更新</string>
    <string name="feedback">意见反馈</string>
    <string name="about">关于我们</string>
    <string name="my_info">个人信息</string>
    <string name="msg_alert">消息提醒</string>
    <string name="assist">辅助功能</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="feedback_title_hint">标题(可选填)</string>
    <string name="feedback_contact_hint">请输入联系方式(可选填，QQ/手机号/邮箱！)</string>
    <string name="feedback_content_hint">请输入您的宝贵意见，以便我们改进</string>
    <string name="title_activity_msg_alert">MsgAlertActivity</string>
    <string name="voice">声音</string>
    <string name="shake">振动</string>
    <string name="new_msg_alert">接收新消息通知</string>
    <string name="new_msg_detail">通知显示新消息详情</string>
    <string name="new_msg_detail_hint">若关闭，当收到新消息时，通知中将不显示消息的发送人和内容摘要。</string>
    <string name="title_activity_assist_function">AssistFunctionActivity</string>
    <string name="clear_cache">清除缓存</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="tell_friend">告诉朋友</string>
    <string name="our_team">我们的团队</string>
    <string name="copyright">©2015 eventer, all rights reserved</string>
    <string name="tell_friend_msg">推荐给你一款比较好用的APP，你可以试用一下~</string>
    <string name="title_activity_our_team">OurTeamActivity</string>
    <string name="not_friend_hint">你们还不是好友，是否添加该好友?</string>
    <string name="title_activity_version">VersionActivity</string>
    <string name="title_activity_share_event">ShareEventActivity</string>
    <string name="time">时间</string>
    <string name="participants">参与者</string>
    <string name="enter">收藏到个人事项中</string>
    <string name="notify">通知:请查看群日程！</string>
    <string name="title_activity_group_share">GroupShareActivity</string>
    <string name="groupshare">群日程列表</string>
    <string name="title_activity_share_single_shecdual">ShareSingleShecdualActivity</string>
    <string name="xlistview_header_hint_loading">加载中…</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放刷新</string>
    <string name="xlistview_footer_hint_ready">释放加载更多</string>
    <string name="xlistview_footer_hint_no_more">已经是最后一页了</string>
    <string name="xlistview_footer_hint_normal">上拉加载更多</string>
    <string name="xlistview_header_last_time">更新于：</string>
    <string name="no_comment">_(:з」∠)_还没有人参与评论…</string>
    <string name="no_collect_event">_(:з」∠)_您还没有收藏任何活动…</string>
    <string name="no_browser_event">_(:з」∠)_您还没有浏览任何活动…</string>
    <string name="no_group">_(:з」∠)_您还未加入任何群组…</string>
    <string name="theme_all">全部</string>
    <string name="theme_lecture">讲座</string>
    <string name="theme_job">招聘</string>
    <string name="theme_fun">娱乐</string>
    <string name="theme_other">其他</string>
    <string name="no_net_info">当前网络不可用</string>
    <string name="empty">空</string>
    <string name="add_course_name">填写课程名</string>
    <string name="tourist"><![CDATA[游客模式>>]]></string>
</resources>