<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_bg"
    android:paddingTop="60dp" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:paddingBottom="15dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher" />
    <RelativeLayout 
        android:id="@+id/rview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1">
    <EditText
        android:id="@+id/edit_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_user_hint"
        android:background="#ffffff"
        android:textColorHint="@color/caldroid_gray"
        android:inputType="number"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textSize="16sp"
       >
        <requestFocus />
    </EditText>
    <ImageButton 
        android:id="@+id/btn_user_clear"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:contentDescription="@string/clear"
        android:background="@drawable/edit_clear_btn_bg"/>
    </RelativeLayout>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_below="@+id/rview"
        android:background="#cccccc" />
     <RelativeLayout 
        android:id="@+id/rview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view">
	    <EditText
	        android:id="@+id/edit_pwd"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/login_pwd_hint"
	        android:background="#ffffff"
	        android:textColorHint="@color/caldroid_gray"
	        android:paddingTop="7dp"
	        android:inputType="textPassword"
	        android:paddingBottom="7dp"
	        android:paddingStart="20dp"
	        android:paddingEnd="20dp"
	        android:singleLine="true"
	        android:textSize="16sp"
	       />

	    <ImageButton 
	        android:id="@+id/btn_pwd_clear"
	        android:layout_width="18dp"
	        android:layout_height="18dp"
	        android:layout_marginStart="10dp"
	        android:layout_marginEnd="10dp"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentEnd="true"
	        android:layout_centerVertical="true"
	        android:visibility="gone"
            android:contentDescription="@string/clear"
	        android:background="@drawable/edit_clear_btn_bg"/>
    </RelativeLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/caldroid_white"
        android:background="@drawable/button_blue"
        android:layout_margin="18dp"
        android:layout_below="@+id/rview2"
        android:textScaleX="1.1"
        android:textSize="20sp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tv_tourist"
        android:layout_below="@id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="18dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="14sp"
        android:textColor="@color/caldroid_holo_blue_light"
        android:text="@string/tourist"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:layout_alignParentBottom="true">
     <TextView
        android:id="@+id/tv_login_help"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="end|center_vertical"
        android:textColor="@color/caldroid_holo_blue_light"
        android:text="@string/login_wrong"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="16sp"
       />
  
    <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="#cccccc" />
    <TextView
        android:id="@+id/tv_login_newuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="start"
        android:textColor="@color/caldroid_holo_blue_light"
        android:background="@color/transparent"
        android:text="@string/login_new"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="16sp" />
        
    </LinearLayout>
</RelativeLayout>
