<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >
    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar">

        <include
            android:id="@+id/top_title"
            layout="@layout/top_layout"/>

        <LinearLayout
            android:id="@+id/ll_changeview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/ib_bg"
            android:layout_centerInParent="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/add_popdownmenu_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/search_course"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/add_downmenuimage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/add_course_name"
                android:scaleType="centerInside"
                android:src="@drawable/button2" />
        </LinearLayout>



        <TextView
            android:id="@+id/tv_add_finish"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:background="@drawable/ib_bg"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/finish"
            android:textColor="@color/white" />
    </RelativeLayout>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="#ffffff" >
        </FrameLayout>

</LinearLayout>