<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/load_root"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_app" >

    <TextView
        android:id="@+id/tv_tourist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="15dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="14sp"
        android:visibility="gone"
        android:textColor="@color/caldroid_holo_blue_light"
        android:text="@string/tourist"/>

   <LinearLayout
       android:id="@+id/login_ll"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_above="@+id/tv_tourist"
       android:visibility="gone"
       android:background="@android:color/transparent"
       >

       <Button
           android:id="@+id/btn_login"
           android:layout_width="0dp"
           android:layout_height="40dp"
           android:layout_marginLeft="10dp"
           android:layout_marginStart="10dp"
           android:layout_marginRight="5dp"
           android:layout_marginEnd="5dp"
           android:layout_weight="1"
           android:background="@drawable/button_blue"
           android:gravity="center"
           android:scaleType="fitXY"
           android:onClick="login"
           android:text="@string/login"
           style="?android:attr/buttonBarButtonStyle"
           android:textColor="#ffffff" />

       <Button
           android:id="@+id/btn_register"
           android:layout_width="0dp"
           android:layout_height="40dp"
           android:layout_marginLeft="5dp"
           android:layout_marginStart="5dp"
           android:layout_marginRight="10dp"
           android:layout_marginEnd="10dp"
           android:layout_weight="1"
           android:background="@drawable/switch_button_left_chexked"
           style="?android:attr/buttonBarButtonStyle"
           android:gravity="center"
           android:scaleType="fitXY"
           android:onClick="register"
           android:text="@string/register"
           android:textColor="@color/caldroid_holo_blue_light" />
   </LinearLayout>
   

   

</RelativeLayout>
