<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/share_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white" >

        <LinearLayout
            android:id="@+id/share_ll"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:paddingTop="5dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >
           <LinearLayout 
               android:layout_width="0dp"
               android:layout_weight="1"
               android:gravity="center_horizontal"
               android:layout_height="match_parent"
               android:orientation="vertical">
            <com.eventer.app.view.CircleImageView
                android:id="@+id/iv_cancel_collect"
                android:layout_width="40dp"
                android:layout_height="40dp" 
                android:src="@drawable/btn_share_heart_down2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textColor="@color/caldroid_holo_blue_light"
                android:text="@string/cancel_collect"/>
         </LinearLayout>
        
          <LinearLayout 
              android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="match_parent"
               android:gravity="center_horizontal"
               android:orientation="vertical">
            <com.eventer.app.view.CircleImageView
                android:id="@+id/iv_share"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/btn_share_forwarding_down" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textColor="@color/caldroid_holo_blue_light"
                android:text="@string/share"/>
        </LinearLayout>
         <LinearLayout 
               android:layout_width="0dp"
               android:layout_weight="1"
               android:gravity="center_horizontal"
               android:layout_height="match_parent"
               android:orientation="vertical">
            <com.eventer.app.view.CircleImageView
                android:id="@+id/iv_comment"
                android:layout_width="40dp"
                android:layout_height="40dp" 
                android:src="@drawable/btn_share_comment_down" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textColor="@color/caldroid_holo_blue_light"
                android:text="@string/commentroom"/>
         </LinearLayout>
      </LinearLayout>

        <TextView
            android:id="@+id/share_line"
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_below="@+id/share_ll"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/line_01" />

        <Button
            android:id="@+id/share_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/share_line"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textColor="#2989be"
            android:textSize="16sp" />
    </RelativeLayout>

</RelativeLayout>